--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <td>
       <table>
         <tr>
-          <td>Soccer player</td>
+          <td>Soccer</td>
           <td>⭐️⭐️⭐️⭐️⭐️</td>
         </tr>
         <tr>
@@ -64,7 +64,7 @@
          <td>⭐️⭐️⭐️⭐️ </td>
         </tr>
         <tr>
-          <td>Ghost writer</td>
+          <td>Ghost writing</td>
           <td>⭐️⭐️⭐️⭐️</td>
         </tr>
         <tr>
