--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li>Glory Baptist High school</li>
     <li>Full Sail University</li>
     <li>Udemy Online Course</li>
+    <li>Jasseh Code Camp JCC</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
