--- a/index.html
+++ b/index.html
@@ -1,82 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-<title>Ousman Personal Site</title>
-<link rel="stylesheet" href="css/styles.css">
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>Mozilla is cool</h1>
+    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
-</body>
+    <p>At Mozilla, we’re a global community of</p>
 
-  <table cellspacing="20">
-   <tr>
-   <td><img
-     src="Ouspac.jpg" alt="Ousman profile picture"></td>
-   <td>  <h1>Ousman Ceesay</h1>
-     <p><em>Co founder of <strong><a href="https://www.instagram.com/therealouspac/">The Money Tree Family</a></strong></em>
-     <P></td>
-   </tr>
-  </table>
+    <ul> <!-- changed to list in the tutorial -->
+      <li>technologists</li>
+      <li>thinkers</li>
+      <li>builders</li>
+    </ul>
 
-  <h1>Ousman Ceesay</h1>
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Glory Baptist High school</li>
-    <li>Full Sail University</li>
-    <li>Udemy Online Course</li>
-    <li>Jasseh Code Camp JCC</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-       <th>Dates</th>
-       <th>Work</th>
-     </tr>
-    </thead>
-<tbody>
-  <tr>
-    <td>2013-2015</td>
-    <td>Bags INC</td>
-  </tr>
-  <tr>
-    <td>2015-2017</td>
-    <td>Prospect Airport Services</td>
-  </tr>
-</tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-
-<table cellspacing="20">
-  <tr>
-    <td>
-      <table>
-        <tr>
-          <td>Soccer</td>
-          <td>⭐️⭐️⭐️⭐️⭐️</td>
-        </tr>
-        <tr>
-         <td>Basketball</td>
-         <td>⭐️⭐️⭐️⭐️ </td>
-        </tr>
-        <tr>
-          <td>Ghost writing</td>
-          <td>⭐️⭐️⭐️⭐️</td>
-        </tr>
-        <tr>
-          <td>Rap</td>
-          <td>⭐️⭐️⭐️⭐️</td>
-        </tr>
-      </table>
-
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Contact Me.html">Contact Me</a>
-</body>
-
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+  </body>
 </html>
